--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
-  
+<body style="text-align: center;">
+  <p id="playerScoreTxt">Player Score: <span></span> </p>
+  <p id="computerScoreTxt">Computer Score: <span></span> </p>
+  <button id="rock">Rock</button>
+  <button id="paper">Paper</button>
+  <button id="scissors">Scissors</button>
+  <br><br>
+  <div id="roundResult"></div>
   <script src="script.js"></script>
 </body>
 </html>
